[package]
name = "aoc-2019-rust"
version = "0.1.0"
authors = ["jasilven <jasilven@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itertools = "0.9.0"
async-std = {version = "1.6", features = ["attributes", "unstable"]}
num = "0.3"
rustbox = "*"
rand = "*"
rayon = "1.3.1"
